# OS_Labs

./: README.md
lab1/: CMakeLists.txt  oslab.sln
lab1/child/: child.cpp  child.vcxproj
lab1/child/x64/Debug/: child.exe.recipe  child.ilk  vc143.idb
lab1/docs/: report1.docx
lab1/oslab/: file.txt  main.cpp  oslab.vcxproj
lab1/oslab/x64/Debug/: oslab.exe.recipe  oslab.ilk  std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.module.json.command  vc143.idb
lab1/src/: CMakeLists.txt  child.cpp  main.cpp
lab1/src/child/: CMakeLists.txt
lab1/src/files/: file.txt.txt
lab2/: oslab2.sln
lab2/docs/: report2.docx
lab2/oslab2/: main.cpp  oslab2.vcxproj
lab2/oslab2/x64/Debug/: oslab2.exe.recipe  oslab2.ilk  vc143.idb
lab3/: oslab3.sln
lab3/child/: child.cpp  child.vcxproj
lab3/child/x64/Debug/: child.exe.recipe  child.ilk  vc143.idb
lab3/docs/: report3.docx
lab3/oslab3/: file.txt  main.cpp  oslab3.vcxproj
lab3/oslab3/x64/Debug/: oslab3.exe.recipe  oslab3.ilk  vc143.idb
lab4/: oslab4.sln
lab4/contract/: contract.cpp
lab4/contract/x64/Debug/: contract.dll.recipe  contract.ilk  vc143.idb
lab4/contract_native/: contract_native.cpp  contract_native.h
lab4/lab4_dynamic/: lab4_dynamic.vcxproj  main.cpp
lab4/oslab4/: main.cpp  oslab4.vcxproj
lab4/x64/Debug/: contract.exp  contract_native.exp
lab5-7/: oslab5_7.sln
lab5-7/common/: List.h  ZmqManager.h  common.vcxproj  common.vcxproj.filters
lab5-7/node/: main.cpp  node.vcxproj
lab5-7/oslab5_7/: main.cpp  oslab5_7.vcxproj
lab5-7/x64/Debug/: common.idb  common.lib
(+117 files in other folders)
